// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EngagementRate when data is loaded renders a component with data loaded 1`] = `
<DocumentFragment>
  <div>
    <div
      class="data"
    >
      56.7%
    </div>
  </div>
</DocumentFragment>
`;

exports[`EngagementRate when data is not loaded renders a component in loading state 1`] = `
<DocumentFragment>
  <div>
    <div
      class="data"
    />
  </div>
</DocumentFragment>
`;

exports[`EngagementRate when data loading has an error renders a component in error state 1`] = `
<DocumentFragment>
  <div>
    <div
      class="data"
    />
  </div>
</DocumentFragment>
`;
